2009-05-25  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/import_export/mealmaster_plugin/mealmaster_importer_plugin.py (test_dir):
	Look for sample recs in src/tests/recipe_files...

	* src/lib/exporters/test_exportManager.py (TestExports.testSingleExport):
	Improve error message when plugin's check_export method throws an
	error.

2009-05-24  Thomas M Hinkle  <tom@minime>

	* src/lib/importers/xml_importer.py (Converter.do_run): Make sure
	we get added_recs from recHandler class.

	* src/lib/importers/importer.py (Importer.__init__): Get
	keymanager using new singleton access method.

	* src/lib/importers/importManager.py (ImportManager.import_filenames):
	make import_filenames return a list of importer instances that we
	used.

2009-05-24  Thomas Hinkle  <tom@grenville>

	* src/lib/exporters/exportManager.py (ExportManager.get_extra_prefs):
	Add method for handling of extra prefs (through UI or
	automagically).
	(do_multiple_export): Use get_extra_prefs / extra_prefs parameter
	(ExportManager.do_single_export): Use get_extra_prefs /
	extra_prefs parameter

2009-05-24  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/import_export/gxml_plugin/gxml_exporter_plugin.py (GourmetExportChecker):
	Add class for testing exports for validity.
	(GourmetExporterPlugin.check_export): Run export checker.

	* src/lib/exporters/test_exportManager.py (TestExports.testSingleExport):
	Run plugin's check_export script if it has one (allows plugins to
	implement their own test).

	* src/lib/reccard.py (IngredientController.get_extra_ingredient_attributes):
	Don't throw error if item is blank/None

2009-05-23  Thomas M Hinkle  <tom@minime>

	* src/tests/recipe_files/mealmaster.mmf: Add custom yield (6 puffs
	for Almond puff)

	* src/lib/plugins/import_export/mealmaster_plugin/mealmaster_importer.py (mmf_importer.handle_line):
	Add support for yields units other than servingts.

2009-05-19  Thomas Hinkle  <tom@grenville>
